syntax = "proto3";

package demoDto;

option java_multiple_files = true;
option java_package = "com.example.democlient.rpc";

service LargeResponseProvider {
  rpc getLargeResponse(Empty) returns (LargeResponse) {}
}

message LargeResponse {
  repeated KeyValuePair keyValuePairs=1;
}

message KeyValuePair {
  string key=1;
  int64 value=2;
}

message Empty {}